<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grid_item_bg_pressed"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.movilbox.dcsuruguay.Activity.ActMarcarVisita"
    tools:showIn="@layout/activity_marcar_visita">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:contentPaddingBottom="6dp"
                app:contentPaddingLeft="6dp"
                app:contentPaddingRight="6dp"
                app:contentPaddingTop="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/dimen_letra_app_titulo"
                        android:text="@string/informaci_n_del_punto"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="27dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">

                        <ImageView
                            android:id="@+id/image_idpos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:tint="@color/colorPrimary"
                            android:src="@drawable/ic_vpn_key_black_24dp"
                            android:layout_centerVertical="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:contentDescription="@string/app_name" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/idPos"
                            android:textStyle="bold"
                            android:layout_marginLeft="13dp"
                            android:textSize="@dimen/dimen_letra_app_estandar"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@+id/image_idpos"
                            android:layout_toEndOf="@+id/image_idpos" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_idpos"
                            android:textSize="@dimen/dimen_letra_app_estandar"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="27dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">

                        <ImageView
                            android:id="@+id/image_razon_social"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:tint="@color/colorPrimary"
                            android:src="@drawable/ic_perm_identity_black_24dp"
                            android:layout_centerVertical="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:contentDescription="@string/app_name" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/raz_n_social"
                            android:layout_marginLeft="13dp"
                            android:textSize="@dimen/dimen_letra_app_estandar"
                            android:textStyle="bold"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@+id/image_razon_social"
                            android:layout_toEndOf="@+id/image_razon_social" />

                        <TextView
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_razon"
                            android:textSize="@dimen/dimen_letra_app_estandar"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:gravity="right" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="27dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">

                        <ImageView
                            android:id="@+id/image_circuito"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:tint="@color/colorPrimary"
                            android:src="@drawable/ic_circuito_24dp"
                            android:layout_centerVertical="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:contentDescription="@string/app_name" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/circuito"
                            android:textStyle="bold"
                            android:layout_marginLeft="13dp"
                            android:textSize="@dimen/dimen_letra_app_estandar"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@+id/image_circuito"
                            android:layout_toEndOf="@+id/image_circuito" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_circuito"
                            android:textSize="@dimen/dimen_letra_app_estandar"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="27dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">

                        <ImageView
                            android:id="@+id/image_ruta"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:tint="@color/colorPrimary"
                            android:src="@drawable/ic_ruta_24dp"
                            android:layout_centerVertical="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:contentDescription="@string/app_name" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ruta"
                            android:textStyle="bold"
                            android:layout_marginLeft="13dp"
                            android:textSize="@dimen/dimen_letra_app_estandar"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@+id/image_ruta"
                            android:layout_toEndOf="@+id/image_ruta" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_ruta"
                            android:textSize="@dimen/dimen_letra_app_estandar"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="27dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">

                        <ImageView
                            android:id="@+id/image_direccion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:tint="@color/colorPrimary"
                            android:src="@drawable/ic_direccion_24dp"
                            android:layout_centerVertical="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:contentDescription="@string/app_name" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/direcci_n"
                            android:textStyle="bold"
                            android:layout_marginLeft="13dp"
                            android:textSize="@dimen/dimen_letra_app_estandar"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@+id/image_direccion"
                            android:layout_toEndOf="@+id/image_direccion" />

                        <TextView
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_direccion"
                            android:textSize="@dimen/dimen_letra_app_estandar"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:gravity="right" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="27dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">

                        <ImageView
                            android:id="@+id/image_departamento"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:tint="@color/colorPrimary"
                            android:src="@drawable/ic_departamento_24dp"
                            android:layout_centerVertical="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:contentDescription="@string/app_name" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/departamento"
                            android:textStyle="bold"
                            android:layout_marginLeft="13dp"
                            android:textSize="@dimen/dimen_letra_app_estandar"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@+id/image_departamento"
                            android:layout_toEndOf="@+id/image_departamento" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_departamento"
                            android:textSize="@dimen/dimen_letra_app_estandar"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true" />

                    </RelativeLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/venta"
                    android:id="@+id/btn_tomar_pedido"
                    android:gravity="center_vertical|center_horizontal" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_venta"
                    android:id="@+id/btn_no_venta"
                    android:visibility="gone"
                    android:gravity="center_vertical|center_horizontal" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inventariar_productos"
                    android:id="@+id/btn_inventariar"
                    android:gravity="center_vertical|center_horizontal" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
